--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/rgbkrk/bromine",
   "dependencies": {
+    "basic-auth": "^1.0.0",
     "body-parser": "^1.9.3",
     "express": "^4.10.3"
   }
